# src/main/java/com/devertelo/payments/controllers/UserController.java
@@ -3,7 +3,6 @@ package com.devertelo.payments.controllers;
 import com.ctrlbet.swagger.api.UsersApi;
 import com.ctrlbet.swagger.model.UserApiRequest;
 import com.ctrlbet.swagger.model.UserApiResponse;
-import com.ctrlbet.swagger.model.UserUpdateApiRequest;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -16,20 +15,8 @@ public class UserController implements UsersApi {
         return UsersApi.super.createUser(userApiRequest);
     }
 
-    @Override public ResponseEntity<Void> deleteUserById(Long id) {
-        return UsersApi.super.deleteUserById(id);
+    @Override public ResponseEntity<List<UserApiResponse>> getAllUsers(String id) {
+        return UsersApi.super.getAllUsers(id);
     }
 
-    @Override public ResponseEntity<List<UserApiResponse>> getAllUsers() {
-        return UsersApi.super.getAllUsers();
-    }
-
-    @Override public ResponseEntity<UserApiResponse> getUserById(Long id) {
-        return UsersApi.super.getUserById(id);
-    }
-
-    @Override
-    public ResponseEntity<UserApiResponse> updateUserById(Long id, UserUpdateApiRequest userUpdateApiRequest) {
-        return UsersApi.super.updateUserById(id, userUpdateApiRequest);
-    }
 }
