# src/main/resources/swagger.yaml
@@ -38,12 +38,69 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserApiResponse'
+  /users/{id}:
+    get:
+        tags:
+          - users
+        summary: Get users
+        description: Get users.
+        operationId: getAllUsers
+        parameters:
+          - name: id
+            in: path
+            description: User Id
+            required: true
+            schema:
+              type: string
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/UserApiResponse'
+  /payment-methods/{userId}:
+    post:
+      tags:
+        - payment-methods
+      summary: Create a payment method
+      description: Create a payment method.
+      operationId: createPaymentMethod
+      parameters:
+        - name: userId
+          in: path
+          description: User Id
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: Payment method request data
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PaymentMethodApiRequest'
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaymentMethodApiResponse'
     get:
       tags:
-        - users
-      summary: Get users
-      description: Get users.
-      operationId: getAllUsers
+        - payment-methods
+      summary: Get Payment Methods
+      description: Get Payment Methods.
+      operationId: getPaymentMethodsByUserId
+      parameters:
+        - name: userId
+          in: path
+          description: User Id
+          required: true
+          schema:
+            type: string
       responses:
         200:
           description: successful operation
@@ -52,120 +109,171 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/UserApiResponse'
-  /users/{id}:
-    put:
+                  $ref: '#/components/schemas/PaymentMethodApiResponse'
+  /payments:
+    post:
       tags:
-        - users
-      summary: Update user
-      description: Update a user.
-      operationId: updateUserById
-      parameters:
-        - name: id
-          in: path
-          description: ID of user
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - payments
+      summary: Create a payment
+      description: Create a payment request.
+      operationId: createPayment
       requestBody:
-        description: Update user object
+        description: payment request data
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserUpdateApiRequest'
+              $ref: '#/components/schemas/PaymentApiRequest'
       responses:
         200:
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserApiResponse'
+                $ref: '#/components/schemas/PaymentApiResponse'
     get:
       tags:
-        - users
-      summary: Get user
-      description: Get user.
-      operationId: getUserById
-      parameters:
-        - name: id
-          in: path
-          description: ID of user
-          required: true
-          schema:
-            type: integer
-            format: int64
+        - payments
+      summary: Get Payments
+      description: Get all payments.
+      operationId: getAllPayments
       responses:
         200:
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserApiResponse'
-    delete:
-      tags:
-        - users
-      summary: Delete user
-      description: Delete user.
-      operationId: deleteUserById
-      parameters:
-        - name: id
-          in: path
-          description: ID of user
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: successful operation
+                type: array
+                items:
+                  $ref: '#/components/schemas/PaymentApiResponse'
 components:
   schemas:
     UserApiRequest:
       type: object
       required:
-        - username
         - name
       properties:
-        username:
+        id:
           type: string
-          example: myUser
-        email:
+          example: f0822b54-0720-11ee-be56-0242ac120002
+        name:
           type: string
-          example: joao@gmail.com
-        password:
-          type: string
-          example: '12345'
-    UserUpdateApiRequest:
-      type: object
-      properties:
-        username:
-          type: string
-          example: theUser
-        email:
-          type: string
-          example: john@email.com
-        password:
-          type: string
-          example: '12345'
+          example: João Vertelo
     UserApiResponse:
       type: object
       properties:
         id:
           type: string
           example: f0822b54-0720-11ee-be56-0242ac120002
-        username:
+        name:
           type: string
-          example: theUser
-        email:
+          example: João Vertelo
+        createdAt:
           type: string
-          example: john@email.com
-        password:
+          example: 2023-07-02T23:26:02+0000
+        updatedAt:
           type: string
-          example: '12345'
-        role:
+          example: 2023-07-02T23:26:02+0000
+    PaymentMethodApiRequest:
+      type: object
+      required:
+        - userId
+        - amountLimit
+      properties:
+        userId:
           type: string
-          example: USER
+          example: f0822b54-0720-11ee-be56-0242ac120002
+        amountLimit:
+          type: string
+          example: amount limit in cents
+        active:
+          type: boolean
+          example: true
+    PaymentMethodApiResponse:
+      type: object
+      required:
+        - userId
+      properties:
+        id:
+          type: string
+          example: f0822b54-0720-11ee-be56-0242ac120002
+        userId:
+          type: string
+          example: f0822b54-0720-11ee-be56-0242ac120002
+        amountLimit:
+          type: string
+          example: amount limit in cents
+        active:
+          type: boolean
+          example: true
+    PaymentApiRequest:
+      type: object
+      required:
+        - type
+        - amount
+        - sync
+      properties:
+        type:
+          type: string
+          enum:
+            - DEBIT
+            - CREDIT
+            - VOUCHER
+          example: DEBIT
+        amount:
+          description: amount in cents
+          type: string
+          example: 100
+        installments:
+          type: number
+          example: 1
+          minimum: 0
+          maximum: 12
+          default: 0
+        sync:
+          type: boolean
+          example: false
+        status:
+          type: string
+          enum:
+            - IN_PROGRESS
+            - PAID
+            - ERROR
+          example: IN_PROGRESS
+    PaymentApiResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          example: f0822b54-0720-11ee-be56-0242ac120002
+        userId:
+          type: string
+          example: f0822b54-0720-11ee-be56-0242ac120002
+        type:
+          type: string
+          enum:
+            - DEBIT
+            - CREDIT
+            - VOUCHER
+          example: DEBIT
+        amount:
+          description: amount in cents
+          type: string
+          example: 100
+        installments:
+          type: number
+          example: 1
+          minimum: 0
+          maximum: 12
+        sync:
+          type: boolean
+          example: false
+        status:
+          type: string
+          enum:
+            - IN_PROGRESS
+            - PAID
+            - ERROR
+          example: IN_PROGRESS
         createdAt:
           type: string
           example: 2023-07-02T23:26:02+0000
